Added mode selectors

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -20,6 +20,15 @@
               </ul>
             </div>
           </div>
+          <div class="dropdown">
+            <button class="dropbtn">Modes</button>
+            <div class="dropdown-content">
+              <ul class="themes-list">
+                <li class="theme-select"><a href="#">HEX</a></li>
+                <li class="theme-select"><a href="#">Binary<a/></li>
+              </ul>
+            </div>
+          </div>
         </ul>
     </nav>
 </header>
