Reordered mode selections

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -24,8 +24,9 @@
             <button class="dropbtn">Modes</button>
             <div class="dropdown-content">
               <ul class="themes-list">
-                <li class="theme-select"><a href="#">HEX</a></li>
                 <li class="theme-select"><a href="#">Binary<a/></li>
+                  <li class="theme-select"><a href="#">Decimal<a/></li>
+                <li class="theme-select"><a href="#">Hexadecimal</a></li>
               </ul>
             </div>
           </div>
