to Decimal mode function

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -25,7 +25,7 @@
             <div class="dropdown-content">
               <ul class="themes-list">
                 <li class="theme-select"><a href="#">Binary<a/></li>
-                  <li class="theme-select"><a href="#">Decimal<a/></li>
+                  <li class="theme-select" onclick="toDec()"><a href="#">Decimal<a/></li>
                 <li class="theme-select" onclick="toHex()"><a href="#">Hexadecimal</a></li>
               </ul>
             </div>
